# Real-time-collaborative-text-editor

./: .gitignore  Boost-guide.md  Guida Boost.md  HANDBOOK on how to install Boost on QT5.md  README.md  c  changelog.md  d  editorwindow.cpp  editorwindow.h  editorwindow.ui  startwindow.cpp  startwindow.ui  versioninfo.h
ClientModule/: .gitignore  .qmake.stash  ClientModule.pro  ClientModule.pro.user.1f0f83f  ClientModule.pro.user.61028f0  ClientModule.pro.user.eebb261  File.cpp  File.h  LoginTo.pro  Makefile  Makefile.Debug  Makefile.Release  MyQTextEdit.cpp  MyQTextEdit.h  Risorse.qrc  RisorseGrafiche.qrc  changelog.md  clientPart.pro  crdt.cpp  crdt.h  debugroom.cpp  debugroom.h  debugroom.ui  editorstate.cpp  editorstate.h  editorwindow.cpp  editorwindow.h  editorwindow.ui  infowindow.cpp  infowindow.h  infowindow.ui  json.hpp  jsonUtility.cpp  jsonUtility.h  loggeduserinfo.cpp  loggeduserinfo.h  logindialog.cpp  logindialog.h  logindialog.ui  loginwindow.cpp  (+45 more)
ClientModuleOLD/: MyClient.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab3/: CMakeLists.txt  Message.cpp  Message.h  NetworkServer.cpp  NetworkServer.h  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h  main.cpp
LoginTo/: LoginTo.pro  LoginTo.pro.user.886befe  LoginTo.pro.user.duVorR  Makefile  Makefile.Debug  Makefile.Release  Risorse.qrc  changelog.md  jsonUtility.h  loginwindow.cpp  loginwindow.cpp.autosave  loginwindow.h  loginwindow.h.autosave  loginwindow.ui  main.cpp  message.cpp  message.h  myClient.cpp  myClient.h  object_script.client.Debug  regwindow.cpp  regwindow.h  regwindow.h.autosave  regwindow.ui  (+5 more)
ServerModule/: .gitignore  CMakeLists.txt  File.cpp  chat_message.hpp  dbService.cpp  dbService.h  email.cpp  fileUtility.cpp  jsonUtility.cpp  jsonUtility.h  main.cpp  message.cpp  msgInfo.cpp  myServer.cpp  myServer.h  participant.cpp  room.cpp  session.cpp  session.h  symbol.cpp  symbolInfo.cpp  symbolStyle.cpp  symbol_formatting.cpp
ServerModule/Db/: texteditor_users.sqlite
ServerModule/Filesystem/: 0BhjNCHK5TVS.txt  0JwS80ArDtoI.txt  0LTrdX3Y2vF8.txt  0ddaFGMe6URR.txt  1N8KfLkqr7rq.txt  1RCQuIU5vgug.txt  1W5LymMdx5hn.txt  2h9itb4hfxKg.txt  2z9LiLlTNNBn.txt  3eouOQckFzbL.txt  3eyuHttHJbAP.txt  3ttpXtZ1ysY9.txt  4IeReFD7slD1.txt  4QAFOZ6sW29g.txt  4p4AE3fDha8H.txt  4rreMsjDjK6b.txt  60es8pss0jwq.txt  62FfchxJABTe.txt  6MWirBwTvLLo.txt  6rY3Qf63Q9Iw.txt  8ab1ORoUhB4T.txt  8gtEXsAovdks.txt  9S13Jj3Alxwb.txt  9UohTed4T0cc.txt  AhuKvAODnC11.txt  AkXUD7Ti7RGO.txt  C2HcM0Svaqbs.txt  C4tEAz1WmxYP.txt  C5gon9mvOnwP.txt  DodeHeWrbURL.txt  FKX3Bg9IA6bP.txt  G9atnDAaU6Mf.txt  GKLRojNU20C9.txt  Gw3nIJpFOqMg.txt  Gzro6oYGkS8l.txt  HAhSYt71hcqw.txt  HTPuXxUhuAMU.txt  IDBiuliWQ0nH.txt  JdwDChYmUsto.txt  Jk9Ct1D0vQjx.txt  (+103 more)
ServerModule/header_files/: File.h  dbService.h  email.h  fileUtility.h  json.hpp  jsonUtility.h  message.h  msgInfo.h  myServer.h  participant.h  room.h  session.h  symbol.h  symbolInfo.h  symbolStyle.h  symbol_formatting.h
(+20 files in other folders)
